--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,16 @@
         <version>5.10.1</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apiguardian</groupId>
+        <artifactId>apiguardian-api</artifactId>
+        <version>1.1.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.opentest4j</groupId>
+        <artifactId>opentest4j</artifactId>
+        <version>1.3.0</version>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
